# Factorywars

./: .gitignore  AUTHORS  COMPILE.md  Makefile  Makefile.am  Makefile.in  README  README.md  TODO.md  aclocal.m4  conf.xml  config.h.in  configure  configure.ac  factorywars.conf  protosave  save  save_format.md
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: config
m4/: ax_check_library.m4
po/: LINGUAS  Makefile.in  Makevars  POTFILES  POTFILES.in  eo.gmo  eo.po  factorywars.pot  fr.gmo  fr.po  messages.mo
saves/test/: seed
src/: .gitignore  Makefile.am  Makefile.in  XMLParser.c  XMLParser.h  action.cpp  action.h  config.c  config.h  display_item.cpp  display_item.h  display_map.cpp  display_map.h  game.cpp  game.h  game_events.cpp  game_events.h  game_mechanics.cpp  game_mechanics.h  gui.cpp  gui.h  gui_exit.cpp  gui_exit.h  gui_init.cpp  gui_init.h  gui_utils.cpp  gui_utils.h  items.cpp  items.h  main.cpp  map.cpp  map.h  map.pb-c.c  map.pb-c.h  map.proto  menu.cpp  menu.h  multiplayer.cpp  multiplayer.h  network.c  (+16 more)
src/sdl/: display_item.h  display_map.cpp  display_map.h  game.cpp  game.h  game_events.cpp  game_events.h  gui_init.cpp  gui_init.h  gui_utils.cpp  gui_utils.h  menu.cpp  menu.h
test/save/: Makefile  main.c  save
