bin_PROGRAMS = factorywars
factorywars_SOURCES = main.cpp gui.cpp gui.h save.c save.h utils.c utils.h items.cpp items.h XMLParser.c XMLParser.h player.cpp player.h config.c config.h network.c network.h display_map.cpp display_map.h display_item.cpp display_item.h multiplayer.cpp multiplayer.h structures.h
AM_CFLAGS = -std=gnu99 $(libxml2_CFLAGS)
AM_CXXFLAGS = -std=gnu++11 $(libxml2_CFLAGS)
